--- a/mggdinfinf.tex
+++ b/mggdinfinf.tex
@@ -32,3 +32,9 @@ Nuevamente de las fórmulas de Little tenemos
 W_q=\frac{L_q}{\lambda}\\
 W=W_q+\frac{1}{\mu}
 \end{equation}
+
+		\begin{figure}[h]
+			\centering\includegraphics[trim = 10mm 220mm 10mm 25mm, clip,width=0.9\linewidth]{MMc}
+		\end{figure}
+		
+
